@@ -514,6 +514,15 @@ fiemap_capable_()
   python "$abs_srcdir"/tests/fiemap-capable "$@"
 }
 
+# Determine if find(1) emits warnings.  This is not the case
+# e.g. if stdin is not a tty.
+find_emits_warnings_()
+{
+  # Find usually emits a warning for the deprecated -d option.
+  find -maxdepth 0 -d -quit 2>&1 \
+    | grep -q 'warning:'
+}
+
 # Skip the current test if "." lacks d_type support.
 require_dirent_d_type_()
 {
